--- a/pages/index.html
+++ b/pages/index.html
@@ -310,7 +310,7 @@
         <div class="caixa-rodape">
             <h2 class="title-roda">Outros</h2>
             <ul>
-                <li><a href="...">Nosso Blog Blog</a></li>
+                <li><a href="...">Nosso Blog </a></li>
                 <li><a href="...">Privacidade</a></li>
                 <li><a href="...">Documentação</a></li>
                 <li><a href="...">Política de Privacidade</a></li>
