Ajuste em navegação da navbar

--- a/pages/index.html
+++ b/pages/index.html
@@ -25,20 +25,20 @@
                     <span id="hamburgue"> </span>
                 </button>
                 <ul class="menu">
-                    <li><a href="Home.html" class="active" id="home">Home</a></li>
-                    <li><a href="#">Loja de Jogos</a></li>
+                    <li><a href="../pages/index.html" >Home</a></li>
+                    <li><a href="../pages/sitecontrucao.html">Loja de Jogos</a></li>
                     <li><a href="../pages/listadejogos.html">Avaliações</a></li>
-                    <li><a href="#">Suporte</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="../pages/sitecontrucao.html">Suporte</a></li>
+                    <li><a href="../pages/sitecontrucao.html">Contato</a></li>
                 </ul>
             </div>
             <div class="btns">
                 <div class="login-button" id="Sign">
-                    <button><a href="Login.html">Sign up</a>
+                    <button><a href="../pages/sitecontrucao.html">Sign up</a>
                     </button>
                 </div>
                 <div class="login-button" id="login">
-                    <button><a href="Login.html">Login</a>
+                    <button><a href="../pages/sitecontrucao.html">Login</a>
                     </button>
                 </div>
             </div>
