--- a/pages/listadejogos.html
+++ b/pages/listadejogos.html
@@ -20,12 +20,13 @@
                 <button id="button_mob">
                     <span id="hamburgue"> </span>
                 </button>
+               
                 <ul class="menu">
-                    <li><a href="../pages/index.html" class="active" id="home">Home</a></li>
-                    <li><a href="#">Loja de Jogos</a></li>
+                    <li><a href="../pages/index.html" >Home</a></li>
+                    <li><a href="../pages/sitecontrucao.html">Loja de Jogos</a></li>
                     <li><a href="../pages/listadejogos.html">Avaliações</a></li>
-                    <li><a href="#">Suporte</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="../pages/sitecontrucao.html">Suporte</a></li>
+                    <li><a href="../pages/sitecontrucao.html">Contato</a></li>
                 </ul>
             </div>
             <div class="btns">
