Ajuste em navegação

--- a/pages/index.html
+++ b/pages/index.html
@@ -56,7 +56,7 @@
                     <p>Maior plataforma de games do</br>Brasil</p>
                 </div>
                 <div class="main-btn">
-                    <a href="https://www.linkedin.com/in/isabelle-moura-a08922220?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+                    <a href="../pages/listadejogos.html"
                         class="btnget">Get in now!
                     </a>
                 </div>
@@ -300,20 +300,20 @@
         <div class="caixa-rodape">
             <h2 class="title-roda">Menu</h2>
             <ul>
-                <li><a href="...">Home</a></li>
-                <li><a href="...">Loja de jogos</a></li>
-                <li><a href="...">Fórum</a></li>
-                <li><a href="...">Suporte</a></li>
-                <li><a href="...">Contato</a></li>
+                <li><a href="../pages/index.html">Home</a></li>
+                <li><a href="../pages/sitecontrucao.html">Loja de jogos</a></li>
+                <li><a href="../pages/sitecontrucao.html">Fórum</a></li>
+                <li><a href="../pages/sitecontrucao.html">Suporte</a></li>
+                <li><a href="../pages/sitecontrucao.html">Contato</a></li>
             </ul>
         </div>
         <div class="caixa-rodape">
             <h2 class="title-roda">Outros</h2>
             <ul>
-                <li><a href="...">Nosso Blog </a></li>
-                <li><a href="...">Privacidade</a></li>
-                <li><a href="...">Documentação</a></li>
-                <li><a href="...">Política de Privacidade</a></li>
+                <li><a href="../pages/sitecontrucao.html">Nosso Blog </a></li>
+                <li><a href="../pages/sitecontrucao.html">Privacidade</a></li>
+                <li><a href="../pages/sitecontrucao.html">Documentação</a></li>
+                <li><a href="../pages/sitecontrucao.html">Política de Privacidade</a></li>
             </ul>
         </div>
         <div class="caixa-rodape" id="social-rodape">
