--- a/pages/listadejogos.html
+++ b/pages/listadejogos.html
@@ -31,11 +31,11 @@
             </div>
             <div class="btns">
                 <div class="login-button" id="Sign">
-                    <button><a href="Login.html">Sign up</a>
+                    <button><a href="../pages/sitecontrucao.html">Sign up</a>
                     </button>
                 </div>
                 <div class="login-button" id="login">
-                    <button><a href="Login.html">Login</a>
+                    <button><a href="../pages/sitecontrucao.html">Login</a>
                     </button>
                 </div>
             </div>
